--- a/HWs/HW1/session.tex
+++ b/HWs/HW1/session.tex
@@ -79,8 +79,8 @@ Brute-force
     \textbf{256-bit}،
     \lr{2$^{256}$}
     حالت مختلف برای حمله کننده ایجاد میکند که شکستن آن به 
-    \textbf{تریلیون}
-    سال ها احتیاج دارد.
+    \textbf{تریلیون ها}
+    سال احتیاج دارد.
 \end{itemize}
 یک رمز ساده حاوی کاراکتر های 
 \textbf{lowercase}
